# ComfyUI-Account-Manager

./: .gitignore  README.md  __init__.py  account_manager.py  config.json  nodes.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
account-manager-web/: generate_token.html  login.html  register.html
account-manager-web/css/: styles.css
account-manager-web/js/: auth.js
tests/: test_history_assets.py  test_history_store.py
utils/: __init__.py  access_control.py  config.py  force_https.py  history_assets.py  history_store.py  ip_filter.py  jwt_auth.py  logger.py  sanitizer.py  timeout.py  users_db.py  validate.py
web/js/: injectCSS.js  logout.js
